# signal-mcp-server

./: AGENTS.md  Cargo.toml  PLAN.md  PROMPT.md  README.md  config.toml
src/: main.rs  mcp.rs  server.rs  settings.rs  signal_cli.rs
