[package]
name = "signal-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Signal MCP Server Contributors"]
description = "MCP server bridging Signal via signal-cli"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
rust-mcp-sdk = { version = "0.7.2", default-features = false, features = ["server", "stdio", "2025_06_18"] }

[dev-dependencies]
once_cell = "1"

[features]
default = ["signal-cli"]
signal-cli = []
mock = []
